test/integration/bad/lang/bad_function2.stan
generated quantities {
   real x;
   y();
}
